--- a/components/common/Layout/layout.module.css
+++ b/components/common/Layout/layout.module.css
@@ -1,3 +1,8 @@
+.root {
+  @apply h-screen relative;
+  max-width: 2460px;
+}
+
 .home {
-  @apply h-screen grid lg:grid-cols-2 lg:grid-rows-[min-content];
+  @apply grid lg:grid-cols-2 lg:grid-rows-[min-content];
 }
