--- a/components/common/Layout/layout.module.css
+++ b/components/common/Layout/layout.module.css
@@ -1,8 +1,3 @@
-.root {
-  @apply h-screen relative;
-  max-width: 2460px;
-}
-
 .home {
-  @apply grid lg:grid-cols-2 lg:grid-rows-[min-content];
+  @apply grid lg:h-screen bg-primary lg:grid-cols-2;
 }
