--- a/components/common/Cookie/cookie.module.css
+++ b/components/common/Cookie/cookie.module.css
@@ -1,3 +1,3 @@
 .root {
-  @apply bg-black w-screen fixed bottom-0 left-0 flex items-center justify-between py-4 px-24 transition-all;
+  @apply bg-black w-full fixed bottom-0 left-0 flex items-center justify-between py-4 px-4 md:px-24 transition-all;
 }
