--- a/styles/base.css
+++ b/styles/base.css
@@ -9,8 +9,13 @@
   --secondary: #ffffff;
 }
 
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   position: relative;
-  min-height: 100%;
-  margin: 0;
 }
